@@ -13,10 +13,13 @@ What's New in astroid 3.3.3?
 ============================
 Release date: TBA
 
+* Fix inference regression with property setters.
+
+  Closes pylint-dev/pylint#9811
+
 * Add annotation-only instance attributes to attrs classes to fix `no-member` false positives.
 
   Closes #2514
-
 
 
 What's New in astroid 3.3.2?
